# cacheforge

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
include/cacheforge/: CommandParser.h  CommandProcessor.h  KVStore.h  README.md  SnapshotPersistence.h  TcpServer.h
src/: CommandParser.cpp  CommandProcessor.cpp  KVStore.cpp  SnapshotPersistence.cpp  TcpServer.cpp  main.cpp
tests/: CommandParserTests.cpp  CommandProcessorTests.cpp  KVStoreTests.cpp  KVStoreThreadTests.cpp  README.md  SnapshotPersistenceTests.cpp  TtlTests.cpp
